--- a/package.json
+++ b/package.json
@@ -59,5 +59,8 @@
     "type": "git",
     "url": "https://github.com/sandiegocodeschool/react100-vstda.git"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "engines": {
+    "node": "8.10.0"
+  }
 }
