--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.16.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-preset-react": "^6.24.1",
     "bluebird": "^3.5.0",
     "chai": "^3.5.0",
     "expect": "^1.20.2",
