--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "bluebird": "^3.5.0",
     "chai": "^3.5.0",
     "expect": "^1.20.2",
@@ -35,6 +36,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-airbnb": "^1.0.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.4.3",
     "chai-as-promised": "^5.3.0",
     "chai-http": "^4.2.0",
