--- a/package.json
+++ b/package.json
@@ -62,8 +62,5 @@
     "type": "git",
     "url": "https://github.com/sandiegocodeschool/react100-vstda.git"
   },
-  "license": "MIT",
-  "engines": {
-    "node": "8.10.0"
-  }
+  "license": "MIT"
 }
