--- a/package.json
+++ b/package.json
@@ -58,5 +58,8 @@
     "type": "git",
     "url": "https://github.com/sandiegocodeschool/react100-vstda.git"
   },
+  "engines": {
+    "node": "8.10.0"
+  },
   "license": "MIT"
 }
