--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "REACT100 Assignment - VSTDA",
   "main": "server/index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "less && webpack",
+    "less": "lessc src/css/style.less dist/css/style.css",
     "start": "npm run build && node server/index.js",
     "lint": "eslint .",
     "test": "npm run build && mocha test/.setup.js test/*.spec.js --exit"
@@ -47,6 +48,7 @@
     "eslint-plugin-react": "^6.2.0",
     "file-loader": "^0.11.2",
     "less": "^3.8.1",
+    "less-loader": "^5.0.0",
     "less-plugin-autoprefix": "^1.5.1",
     "mocha": "^5.2.0",
     "react-addons-test-utils": "^15.6.0",
