--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-register": "^6.4.3",
     "chai-as-promised": "^5.3.0",
     "chai-http": "^4.2.0",
+    "css-loader": "^2.1.1",
     "csx": "^4.0.0",
     "enzyme": "^2.4.1",
     "eslint": "^3.15.0",
